--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "google-auth-library": "^10.5.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "mongodb": "^7.0.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
