--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -50,7 +51,7 @@
     "google-auth-library": "^10.5.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "mongodb": "^7.0.0",
+    "mysql2": "^3.3.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
@@ -77,6 +78,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4.1.9",
     "ts-jest": "^29.4.5",
     "tw-animate-css": "1.3.3",
